--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,34 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 
-* {
-    font-family: 'Roboto Slab', serif, Helvetica;
-}
-
 body {
+    font-family: 'Roboto Slab', serif, Helvetica;
     background-image: url(img/chapada-dos-guimaraes-mato-grosso-zarpo-magazine.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-#root {
-    display: inline-block;
-    padding: 20px;
-    
-}
-
-label {
-    color: #000000;
-    font-size: 22px;
-}
-
-.textBox {
-    display: block;
-    width: 25vw;
-    margin: 10px 0 10px 0;
-}
-
-.submitButton {
-    display: inline-block;
-    text-align: center;
-    cursor: pointer;
+.flex-container {
+    display: flex;
+    flex-direction: column;
 }
