--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,35 +1,56 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
-
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap");
+html {
+  height: 100%;
+}
 body {
-    font-family: 'Roboto Slab', serif, Helvetica;
-    background-image: url(img/chapada-dos-guimaraes-mato-grosso-zarpo-magazine.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    align-items: center;
-    margin: 15px;
+  font-family: "Roboto Slab", serif, Helvetica;
+  background-image: url(img/chapada-dos-guimaraes-mato-grosso-zarpo-magazine.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
-h1, label{
-    color: #FFF;
+.row {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+}
+
+.form {
+  display: flex;
+  flex-basis: 389px;
+  justify-content: flex-end;
+  padding-right: 64px;
+}
+
+.logo {
+  align-items: flex-end;
+  padding-left: 64px;
+  display: flex;
+  flex: 1;
+}
+
+h1,
+label {
+  color: #fff;
 }
 
 label {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 input {
-    border-radius: 4px;
-    margin: 20px 0 15px 0;
-    width: 100%;
+  border-radius: 4px;
+  margin: 20px 0 15px 0;
+  width: 100%;
 }
 
 .flex-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
